--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,17 @@
 
   <build>
 	<plugins>
-	  <plugin>
+		<plugin>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-maven-plugin</artifactId>
+            <version>0.0.6</version>
+            <!-- Default configuration for running -->
+            <!-- Usage: mvn javafx:run -->
+            <configuration>
+                <mainClass>workoutJournal.WorkoutJournalApp</mainClass>
+            </configuration>
+        </plugin>
+	<plugin>
 		<artifactId>maven-compiler-plugin</artifactId>
 		<version>3.8.0</version>
 		<configuration>
